fixed most things except responsiveness on smaller screens. need to link project documentation tomorrow.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,8 +44,7 @@ h3 {
     padding-left: 20%;
 }
 
-h3 a {
-  font-size: 2rem;
+p a {
   font-family: "Neucha", cursive;
   font-weight: 400;
   font-style: normal;
@@ -54,20 +53,21 @@ h3 a {
   border-bottom: 5px solid #B2CB21;
 }
 
-h3 a:hover {
+p a:hover {
   background-color: #B2CB21;
-  padding-top: 2%;
 }
 
 
 p {
-    font-size: 1.4em;
+    font-size: 2em;
     line-height: 1.2em;
     font-family: "Neucha", cursive;
     font-weight: 400;
     font-style: normal;
-    display: flex;
-    justify-content: center;
+    justify-content: left;
+    padding-right: 20%;
+    padding-left: 20%;
+    line-height: 160%;
 }
 
 
@@ -146,19 +146,24 @@ animation: dance 0.6s infinite ease-in-out;
 
 /* POPUP */
 
+#popup h1 {
+  font-size: 1em;
+}
+
+
 #popup {
-    position: fixed;
-    top: 30%;
-    left: 50%; 
-    transform: translateX(-50%); 
+    position: absolute;
     background: #D1FFF7; 
+    font-size: 0.7em;
     padding: 20px;
     margin: 20px;
-    max-width: 300px; 
+    max-width: 20rem; 
     border: 5px solid #B2CB21;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
-    z-index: 999;
     border-radius: 10%;
+}
+#popup p {
+  padding: 0;
 }
 
 .hidden {
@@ -214,6 +219,8 @@ animation: dance 0.6s infinite ease-in-out;
 /* MAP BUTTONS */
 
 #map-controls {
+  display: flex;
+  gap: 5%;
   font-family: "Neucha", cursive;
   font-optical-sizing: auto;
   font-weight: 800;
@@ -229,8 +236,8 @@ animation: dance 0.6s infinite ease-in-out;
   padding: 2px 20px;
   background-color: #D1FFF7;
   position: absolute;
-  top: 2%;
-  left: 69%;
+  top: 5%;
+  left: 74%;
 }
 
 
@@ -241,25 +248,31 @@ animation: dance 0.6s infinite ease-in-out;
   width: 65rem;
   height: 40rem;
   position: relative; 
-  overflow: hidden;
+  overflow: auto;
   padding-bottom: 0;
   border: 5px solid #B2CB21;
   border-radius: 10px;
   background-color: #dde89d;
+  margin-bottom: 1%;
 }
 
 #map-svg {
   margin: auto;
   position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
   margin: 0;
   padding: 0;
-  width: auto;
-  height: auto;
+  max-width: 100%;
+  height: 50%;
 }
 
+/*
+fixed other issueeeee yipeee! - for future if svg panzom inside container then: max-width 100% (so it takes the size of the container AND don't need this   left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+
+helpful stackoverflow link (thank coding gods): https://stackoverflow.com/questions/25940741/making-svg-responsive
+
+*/
 
 
 /*
@@ -515,6 +528,41 @@ height: 620px;
 }
 
 
+/* PROJECT DOCUMENTATION */
+
+.project-documentation p {
+  font-size: 1.4em;
+  display: block;
+  margin: 0;
+  line-height: 185%;
+}
+
+.project-documentation {
+  margin-top: 5%;
+  display: flex;  
+  flex-direction: column;
+  width: 100%;
+  place-items: center;
+  background-color: #dde89d;
+  text-align: center;
+  border-top: 3px solid #B2CB21;
+  padding-bottom: 1%;
+  padding-top: 1%;
+}
+
+.project-introduction {
+  display: flex;  
+  place-items: center;
+
+}
+
+.project-documentation a {
+  border-bottom: 3px solid #ffffe7;
+}
+
+.project-documentation a:hover {
+  background-color: #ffffe7;
+}
 
 /* LINKS */
 
@@ -549,19 +597,21 @@ height: 620px;
 }
 
 
-
+/*
 .project-introduction p {
     display: block;
     padding-right: 20%;
     padding-left: 20%;
     line-height: 160%;
+    margin: 0;
 }
+
 
 .project-introduction a {
     text-decoration: none;
     border-bottom: 3px solid #B2CB21;
     color: black;
-    font-weight: 900;
+    font-weight: 400;
     padding: 2px;
 }
 
@@ -570,6 +620,8 @@ height: 620px;
     padding-top: 0.6%;
 
 }
+
+*/
 
  
 /* MEDIA QUERIES */
@@ -580,6 +632,11 @@ height: 620px;
     width: 800px;
     height:  500px;
   }
+
+  #map-controls {
+    top: 5%;
+    left: 70%;
+  }
   
 }
 
@@ -587,8 +644,43 @@ height: 620px;
 @media screen and (max-width: 950px) {
 
   #map-container {
-    width: 400px;
+    width: 475px;
     height:  300px;
+    margin-right: 3%;
+    margin-left: 3%;
+  }
+
+  #map-controls {
+    top: 5%;
+    left: 63%;
+    font-size: 1.5em;
+  }
+
+  #popup {
+    margin: 0;
+    padding: 2%;
+    width: 200px;
+  }
+
+  #popup audio {
+    width: 200px;
+  }
+
+  #popup h2 {
+    font-size: 1.7em;
+    text-align: center;
+  }
+
+  #popup p {
+    font-size: 1.5em;
+    line-break: normal;
+    padding-left: 2%;
+  }
+
+  #popup #close-btn {
+    font-size: 3em;
+    padding: 0;
   }
   
+
 }
